--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="app_name">FirstApp</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="btn_sign_in">Sign In</string>
+    <string name="btn_sign_up">Sign Up</string>
+    <string name="btn_log_in">Log In</string>
     <string name="title_activity_sign_in">SignInActivity</string>
 
     <string-array name="educations">
@@ -18,5 +19,7 @@
 
     <string name="server_location">10.0.2.2/android_test/</string>
     <string name="title_activity_game">GameActivity</string>
+    <string name="btn_user_info">User Info</string>
+    <string name="title_activity_user_info">UserInfoActivity</string>
 
 </resources>
