--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,26 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">FirstApp</string>
+    <string name="app_name">Assassin</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="btn_sign_up">Sign Up</string>
     <string name="btn_log_in">Log In</string>
-    <string name="title_activity_sign_in">SignInActivity</string>
-
-    <string-array name="educations">
-        <item>Medialogy</item>
-        <item>Humanistisk Informatik</item>
-        <item>Tekno-Antropology</item>
-        <item>By Miljø og Energi</item>
-        <item>IT and Communication</item>
-        <item>Landinspektør</item>
-    </string-array>
-
     <string name="server_location">10.0.2.2/android_test/</string>
     <string name="title_activity_game">GameActivity</string>
     <string name="btn_user_info">User Info</string>
     <string name="title_activity_user_info">UserInfoActivity</string>
     <string name="title_activity_features">FeaturesActivity</string>
+    <string name="title_activity_status">Status</string>
 
 </resources>
