--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="title_activity_user_info">UserInfoActivity</string>
     <string name="title_activity_features">FeaturesActivity</string>
     <string name="title_activity_dashboard">Status</string>
+    <string name="title_activity_assassin_view">Assassin View</string>
 
 </resources>
